--- a/LAWS.html
+++ b/LAWS.html
@@ -1,4 +1,4 @@
-<!-- index.html for GitHub project root -->
+<!-- LAWS.html – صفحه اصلی نمایش آرشیو قوانین به صورت چندزبانه از Supabase -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,17 +7,20 @@
     <title>LAWS - Legal Archive Portal</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
     <script>
+      const SUPABASE_URL = 'https://tdvimwqotnuvcdvhvbjj.supabase.co';
+      const API_KEY = 'your-anon-key';
+
       async function loadCategories() {
         const lang = document.getElementById('language').value;
-        const res = await fetch('https://tdvimwqotnuvcdvhvbjj.supabase.co/rest/v1/law_categories', {
+        const res = await fetch(`${SUPABASE_URL}/rest/v1/law_categories`, {
           headers: {
-            apikey: 'your-anon-key',
-            Authorization: 'Bearer your-anon-key'
+            apikey: API_KEY,
+            Authorization: `Bearer ${API_KEY}`
           }
         });
         const categories = await res.json();
         const select = document.getElementById('category');
-        select.innerHTML = '<option value="all">' + (lang === 'tr' ? 'Tüm Kategoriler' : lang === 'fa' ? 'همه دسته‌بندی‌ها' : lang === 'ru' ? 'Все категории' : 'All Categories') + '</option>';
+        select.innerHTML = '';
         categories.forEach(cat => {
           const option = document.createElement('option');
           option.value = cat.id;
@@ -29,9 +32,41 @@
         });
       }
 
+      async function loadLaws() {
+        const lang = document.getElementById('language').value;
+        const res = await fetch(`${SUPABASE_URL}/rest/v1/laws?select=*`, {
+          headers: {
+            apikey: API_KEY,
+            Authorization: `Bearer ${API_KEY}`
+          }
+        });
+        const laws = await res.json();
+        const container = document.getElementById('laws');
+        container.innerHTML = '';
+        laws.forEach(law => {
+          const div = document.createElement('div');
+          div.className = 'border p-4 mb-4 bg-white shadow rounded';
+          const title = lang === 'tr' ? law.title_original :
+                        lang === 'fa' ? law.title_fa :
+                        lang === 'ru' ? law.title_ru :
+                                       law.title_en;
+          div.innerHTML = `
+            <h2 class="text-xl font-semibold mb-2">${title}</h2>
+            <p class="text-gray-600 text-sm mb-1">Law ID: ${law.law_id}</p>
+            <p class="text-gray-600 text-sm mb-1">Category: ${law.categories}</p>
+            <p class="text-gray-500 text-sm">Published: ${law.publish_date}</p>
+          `;
+          container.appendChild(div);
+        });
+      }
+
       window.onload = () => {
         loadCategories();
-        document.getElementById('language').addEventListener('change', loadCategories);
+        loadLaws();
+        document.getElementById('language').addEventListener('change', () => {
+          loadCategories();
+          loadLaws();
+        });
       };
     </script>
   </head>
@@ -53,6 +88,8 @@
 
         <input id="search" type="text" placeholder="Search laws..." class="border p-2 rounded w-full md:w-1/3" />
       </div>
+
+      <div id="laws"></div>
     </div>
   </body>
 </html>
