--- a/LAWS.html
+++ b/LAWS.html
@@ -48,41 +48,6 @@
         const laws = await res.json();
         const container = document.getElementById('laws');
         container.innerHTML = '';
-        laws
-          .filter(law => {
-            const title = lang === 'tr' ? law.title_original :
-                          lang === 'fa' ? law.title_fa :
-                          lang === 'ru' ? law.title_ru :
-                                         law.title_en;
-            return title.toLowerCase().includes(search);
-          })
-          .forEach(law => {
-            const div = document.createElement('div');
-            div.className = 'border p-4 mb-4 bg-white shadow rounded cursor-pointer';
-            const title = lang === 'tr' ? law.title_original :
-                          lang === 'fa' ? law.title_fa :
-                          lang === 'ru' ? law.title_ru :
-                                         law.title_en;
-            div.innerHTML = `
-              <h2 class="text-xl font-semibold mb-2">${title}</h2>
-              <p class="text-gray-600 text-sm mb-1">Law ID: ${law.law_id}</p>
-              <p class="text-gray-600 text-sm mb-1">Category: Not specified</p>
-              <p class="text-gray-500 text-sm">Published: ${law.publish_date}</p>
-            `;
-            div.addEventListener('click', () => {
-              window.location.href = `details.html?id=${encodeURIComponent(law.law_id)}`;
-            });
-            container.appendChild(div);
-          });
-      }/rest/v1/laws?select=*`, {
-          headers: {
-            apikey: API_KEY,
-            Authorization: `Bearer ${API_KEY}`
-          }
-        });
-        const laws = await res.json();
-        const container = document.getElementById('laws');
-        container.innerHTML = '';
         laws.forEach(law => {
           const div = document.createElement('div');
           div.className = 'border p-4 mb-4 bg-white shadow rounded';
@@ -91,7 +56,7 @@
                         lang === 'ru' ? law.title_ru :
                                        law.title_en;
           div.innerHTML = `
-            <h2 class="text-xl font-semibold mb-2">${title}</h2>
+            <h2 class="text-xl font-semibold mb-2 text-blue-600 underline cursor-pointer" onclick="window.location.href='LAW_details.html?id=${encodeURIComponent(law.law_id)}'">${title}</h2>
             <p class="text-gray-600 text-sm mb-1">Law ID: ${law.law_id}</p>
             <p class="text-gray-600 text-sm mb-1">Category: Not specified</p>
             <p class="text-gray-500 text-sm">Published: ${law.publish_date}</p>
@@ -101,6 +66,7 @@
       }
 
       window.onload = () => {
+        document.getElementById('laws').innerHTML = '<p class="text-gray-500">Loading...</p>';
         loadCategories();
         loadLaws();
         document.getElementById('language').addEventListener('change', () => {
