--- a/LAWS.html
+++ b/LAWS.html
@@ -1,61 +1,134 @@
-<script>
-  async function loadLaws() {
-    const lang = document.getElementById('language').value;
-    const search = document.getElementById('search').value.toLowerCase();
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>LAWS - Legal Archive Portal</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" />
+</head>
+<body class="bg-gray-50 font-sans">
+  <div class="max-w-5xl mx-auto p-6">
+    <div class="flex flex-col md:flex-row items-center justify-between mb-4 gap-2">
+      <select id="language" class="border p-2 rounded">
+        <option value="en">English</option>
+        <option value="tr">Türkçe</option>
+        <option value="fa">فارسی</option>
+        <option value="ru">Русский</option>
+      </select>
 
-    const [lawsRes, catsRes] = await Promise.all([
-      fetch(`${SUPABASE_URL}/rest/v1/laws?select=*`, {
+      <select id="category" class="border p-2 rounded">
+        <option value="all">All Categories</option>
+      </select>
+
+      <input id="search" type="text" placeholder="Search laws..." class="border p-2 rounded w-full md:w-1/3" />
+    </div>
+
+    <div id="laws"></div>
+  </div>
+
+  <script>
+    const SUPABASE_URL = 'https://tdvimwqotnuvcdvhvbjj.supabase.co';
+    const API_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRkdmltd3FvdG51dmNkdmh2YmpqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDkxMDY2MjcsImV4cCI6MjA2NDY4MjYyN30.CWNPk-S-ECq0c1LRugDJYOchY3mgC2Zchyr8X8-mDeE';
+
+    async function loadCategories() {
+      const lang = document.getElementById('language').value;
+      const res = await fetch(`${SUPABASE_URL}/rest/v1/law_categories`, {
         headers: {
           apikey: API_KEY,
           Authorization: `Bearer ${API_KEY}`
         }
-      }),
-      fetch(`${SUPABASE_URL}/rest/v1/law_categories`, {
-        headers: {
-          apikey: API_KEY,
-          Authorization: `Bearer ${API_KEY}`
-        }
-      })
-    ]);
+      });
+      const categories = await res.json();
+      const select = document.getElementById('category');
+      select.innerHTML = '<option value="all">' +
+        (lang === 'tr' ? 'Tüm Kategoriler' :
+         lang === 'fa' ? 'همه دسته‌بندی‌ها' :
+         lang === 'ru' ? 'Все категории' :
+         'All Categories') + '</option>';
+      categories.forEach(cat => {
+        const option = document.createElement('option');
+        option.value = cat.id;
+        option.textContent =
+          lang === 'tr' ? cat.name :
+          lang === 'fa' ? cat.name_fa :
+          lang === 'ru' ? cat.name_ru :
+          cat.name_en;
+        select.appendChild(option);
+      });
+    }
 
-    const laws = await lawsRes.json();
-    const categories = await catsRes.json();
+    async function loadLaws() {
+      const lang = document.getElementById('language').value;
+      const search = document.getElementById('search').value.toLowerCase();
 
-    const container = document.getElementById('laws');
-    container.innerHTML = '';
-
-    laws.forEach(law => {
-      const title =
-        lang === 'tr' ? law.title_original :
-        lang === 'fa' ? law.title_fa :
-        lang === 'ru' ? law.title_ru :
-        law.title_en;
-
-      const catNames = (law.categories_original || [])
-        .map(id => {
-          const cat = categories.find(c => c.id === id);
-          if (!cat) return null;
-          return (
-            lang === 'tr' ? cat.name :
-            lang === 'fa' ? cat.name_fa :
-            lang === 'ru' ? cat.name_ru :
-            cat.name_en
-          );
+      const [lawsRes, catsRes] = await Promise.all([
+        fetch(`${SUPABASE_URL}/rest/v1/laws?select=*`, {
+          headers: {
+            apikey: API_KEY,
+            Authorization: `Bearer ${API_KEY}`
+          }
+        }),
+        fetch(`${SUPABASE_URL}/rest/v1/law_categories`, {
+          headers: {
+            apikey: API_KEY,
+            Authorization: `Bearer ${API_KEY}`
+          }
         })
-        .filter(Boolean)
-        .join(', ') || 'Not specified';
+      ]);
 
-      const div = document.createElement('div');
-      div.className = 'border p-4 mb-4 bg-white shadow rounded';
+      const laws = await lawsRes.json();
+      const categories = await catsRes.json();
 
-      div.innerHTML = `
-        <h2 class="text-xl font-semibold mb-2 text-blue-600 underline cursor-pointer" onclick="window.location.href='LAW_details.html?id=${encodeURIComponent(law.law_id)}'">${title}</h2>
-        <p class="text-gray-600 text-sm mb-1">Law ID: ${law.law_id}</p>
-        <p class="text-gray-600 text-sm mb-1">Category: ${catNames}</p>
-        <p class="text-gray-500 text-sm">Published: ${law.publish_date}</p>
-      `;
+      const container = document.getElementById('laws');
+      container.innerHTML = '';
 
-      container.appendChild(div);
-    });
-  }
-</script>
+      laws.forEach(law => {
+        const title =
+          lang === 'tr' ? law.title_original :
+          lang === 'fa' ? law.title_fa :
+          lang === 'ru' ? law.title_ru :
+          law.title_en;
+
+        const catNames = (law.categories_original || [])
+          .map(id => {
+            const cat = categories.find(c => c.id === id);
+            if (!cat) return null;
+            return (
+              lang === 'tr' ? cat.name :
+              lang === 'fa' ? cat.name_fa :
+              lang === 'ru' ? cat.name_ru :
+              cat.name_en
+            );
+          })
+          .filter(Boolean)
+          .join(', ') || 'Not specified';
+
+        const div = document.createElement('div');
+        div.className = 'border p-4 mb-4 bg-white shadow rounded';
+
+        div.innerHTML = `
+          <h2 class="text-xl font-semibold mb-2 text-blue-600 underline cursor-pointer"
+              onclick="window.location.href='LAW_details.html?id=${encodeURIComponent(law.law_id)}'">
+            ${title}
+          </h2>
+          <p class="text-gray-600 text-sm mb-1">Law ID: ${law.law_id}</p>
+          <p class="text-gray-600 text-sm mb-1">Category: ${catNames}</p>
+          <p class="text-gray-500 text-sm">Published: ${law.publish_date}</p>
+        `;
+
+        container.appendChild(div);
+      });
+    }
+
+    window.onload = () => {
+      loadCategories();
+      loadLaws();
+      document.getElementById('language').addEventListener('change', () => {
+        loadCategories();
+        loadLaws();
+      });
+      document.getElementById('search').addEventListener('input', loadLaws);
+    };
+  </script>
+</body>
+</html>
