--- a/LAWS.html
+++ b/LAWS.html
@@ -8,6 +8,7 @@
 </head>
 <body class="bg-gray-50 font-sans">
   <div class="max-w-5xl mx-auto p-6">
+
     <div class="flex flex-col md:flex-row items-center justify-between mb-4 gap-2">
       <select id="language" class="border p-2 rounded">
         <option value="en">English</option>
@@ -17,7 +18,7 @@
       </select>
 
       <select id="category" class="border p-2 rounded">
-        <option value="all">All Categories</option>
+        <!-- گزینه‌ها به‌صورت داینامیک لود می‌شوند -->
       </select>
 
       <input id="search" type="text" placeholder="Search laws..." class="border p-2 rounded w-full md:w-1/3" />
@@ -40,11 +41,20 @@
       });
       const categories = await res.json();
       const select = document.getElementById('category');
-      select.innerHTML = '<option value="all">' +
-        (lang === 'tr' ? 'Tüm Kategoriler' :
-         lang === 'fa' ? 'همه دسته‌بندی‌ها' :
-         lang === 'ru' ? 'Все категории' :
-         'All Categories') + '</option>';
+
+      select.innerHTML = '';
+
+      // گزینه پیش‌فرض All Categories
+      const defaultOption = document.createElement('option');
+      defaultOption.value = 'all';
+      defaultOption.textContent =
+        lang === 'tr' ? 'Tüm Kategoriler' :
+        lang === 'fa' ? 'همه دسته‌بندی‌ها' :
+        lang === 'ru' ? 'Все категории' :
+        'All Categories';
+      select.appendChild(defaultOption);
+
+      // سایر دسته‌بندی‌ها از دیتابیس
       categories.forEach(cat => {
         const option = document.createElement('option');
         option.value = cat.id;
@@ -59,6 +69,7 @@
 
     async function loadLaws() {
       const lang = document.getElementById('language').value;
+      const selectedCat = document.getElementById('category').value;
       const search = document.getElementById('search').value.toLowerCase();
 
       const [lawsRes, catsRes] = await Promise.all([
@@ -82,51 +93,71 @@
       const container = document.getElementById('laws');
       container.innerHTML = '';
 
-      laws.forEach(law => {
-        const title =
-          lang === 'tr' ? law.title_original :
-          lang === 'fa' ? law.title_fa :
-          lang === 'ru' ? law.title_ru :
-          law.title_en;
+      laws
+        .filter(law => {
+          // فیلتر دسته‌بندی
+          if (selectedCat !== 'all') {
+            return (law.categories_original || []).includes(parseInt(selectedCat));
+          }
+          return true;
+        })
+        .filter(law => {
+          // فیلتر براساس جستجو
+          const title =
+            lang === 'tr' ? law.title_original :
+            lang === 'fa' ? law.title_fa :
+            lang === 'ru' ? law.title_ru :
+            law.title_en;
+          return title?.toLowerCase().includes(search);
+        })
+        .forEach(law => {
+          const title =
+            lang === 'tr' ? law.title_original :
+            lang === 'fa' ? law.title_fa :
+            lang === 'ru' ? law.title_ru :
+            law.title_en;
 
-        const catNames = (law.categories_original || [])
-          .map(id => {
-            const cat = categories.find(c => c.id === id);
-            if (!cat) return null;
-            return (
-              lang === 'tr' ? cat.name :
-              lang === 'fa' ? cat.name_fa :
-              lang === 'ru' ? cat.name_ru :
-              cat.name_en
-            );
-          })
-          .filter(Boolean)
-          .join(', ') || 'Not specified';
+          const catNames = (law.categories_original || [])
+            .map(id => {
+              const cat = categories.find(c => c.id === id);
+              if (!cat) return null;
+              return (
+                lang === 'tr' ? cat.name :
+                lang === 'fa' ? cat.name_fa :
+                lang === 'ru' ? cat.name_ru :
+                cat.name_en
+              );
+            })
+            .filter(Boolean)
+            .join(', ') || 'Not specified';
 
-        const div = document.createElement('div');
-        div.className = 'border p-4 mb-4 bg-white shadow rounded';
+          const div = document.createElement('div');
+          div.className = 'border p-4 mb-4 bg-white shadow rounded';
 
-        div.innerHTML = `
-          <h2 class="text-xl font-semibold mb-2 text-blue-600 underline cursor-pointer"
-              onclick="window.location.href='LAW_details.html?id=${encodeURIComponent(law.law_id)}'">
-            ${title}
-          </h2>
-          <p class="text-gray-600 text-sm mb-1">Law ID: ${law.law_id}</p>
-          <p class="text-gray-600 text-sm mb-1">Category: ${catNames}</p>
-          <p class="text-gray-500 text-sm">Published: ${law.publish_date}</p>
-        `;
+          div.innerHTML = `
+            <h2 class="text-xl font-semibold mb-2 text-blue-600 underline cursor-pointer"
+                onclick="window.location.href='LAW_details.html?id=${encodeURIComponent(law.law_id)}'">
+              ${title}
+            </h2>
+            <p class="text-gray-600 text-sm mb-1">Law ID: ${law.law_id}</p>
+            <p class="text-gray-600 text-sm mb-1">Category: ${catNames}</p>
+            <p class="text-gray-500 text-sm">Published: ${law.publish_date}</p>
+          `;
 
-        container.appendChild(div);
-      });
+          container.appendChild(div);
+        });
     }
 
     window.onload = () => {
       loadCategories();
       loadLaws();
+
       document.getElementById('language').addEventListener('change', () => {
         loadCategories();
         loadLaws();
       });
+
+      document.getElementById('category').addEventListener('change', loadLaws);
       document.getElementById('search').addEventListener('input', loadLaws);
     };
   </script>
