--- a/LAWS.html
+++ b/LAWS.html
@@ -18,7 +18,7 @@
       </select>
 
       <select id="category" class="border p-2 rounded">
-        <!-- همه دسته‌ها مستقیماً از دیتابیس بارگذاری می‌شوند -->
+        <!-- Filled dynamically -->
       </select>
 
       <input id="search" type="text" placeholder="Search laws..." class="border p-2 rounded w-full md:w-1/3" />
@@ -118,7 +118,7 @@
 
             div.innerHTML = `
               <h2 class="text-xl font-semibold mb-2 text-blue-600 underline cursor-pointer"
-                  onclick="window.location.href='LAW_details.html?id=${encodeURIComponent(law.law_id)}'">
+                  onclick="window.location.href='LAW_details.html?id=${encodeURIComponent(law.law_id)}&lang=${lang}'">
                 ${title}
               </h2>
               <p class="text-gray-600 text-sm mb-1">Law ID: ${law.law_id}</p>
