--- a/LAWS.html
+++ b/LAWS.html
@@ -116,9 +116,10 @@
             const div = document.createElement('div');
             div.className = 'border p-4 mb-4 bg-white shadow rounded';
 
+            // لینک با ارسال lang به صفحه جزئیات
             div.innerHTML = `
               <h2 class="text-xl font-semibold mb-2 text-blue-600 underline cursor-pointer"
-                  onclick="window.location.href='LAW_details.html?id=${encodeURIComponent(law.law_id)}&lang=${lang}'">
+                  onclick="window.location.href='LAW_details.html?id=${encodeURIComponent(law.law_id)}&lang=' + document.getElementById('language').value">
                 ${title}
               </h2>
               <p class="text-gray-600 text-sm mb-1">Law ID: ${law.law_id}</p>
