--- a/LAWS.html
+++ b/LAWS.html
@@ -116,7 +116,6 @@
             const div = document.createElement('div');
             div.className = 'border p-4 mb-4 bg-white shadow rounded';
 
-            // لینک با ارسال lang به صفحه جزئیات
             div.innerHTML = `
               <h2 class="text-xl font-semibold mb-2 text-blue-600 underline cursor-pointer"
                   onclick="window.location.href='LAW_details.html?id=${encodeURIComponent(law.law_id)}&lang=' + document.getElementById('language').value">
@@ -141,9 +140,17 @@
     }
 
     window.onload = () => {
+      // بازگرداندن زبان ذخیره‌شده در localStorage
+      const savedLang = localStorage.getItem('selectedLanguage');
+      if (savedLang) {
+        document.getElementById('language').value = savedLang;
+      }
+
       loadCategories().then(loadLaws);
 
       document.getElementById('language').addEventListener('change', () => {
+        const lang = document.getElementById('language').value;
+        localStorage.setItem('selectedLanguage', lang);
         loadCategories().then(loadLaws);
       });
 
