--- a/LAWS.html
+++ b/LAWS.html
@@ -10,12 +10,7 @@
   <div class="max-w-5xl mx-auto p-6">
 
     <div class="flex flex-col md:flex-row items-center justify-between mb-4 gap-2">
-      <select id="language" class="border p-2 rounded">
-        <option value="en">English</option>
-        <option value="tr">Türkçe</option>
-        <option value="fa">فارسی</option>
-        <option value="ru">Русский</option>
-      </select>
+      <select id="language" class="border p-2 rounded"></select>
 
       <select id="category" class="border p-2 rounded">
         <!-- Filled dynamically -->
@@ -44,33 +39,37 @@
       }
 
       const searchInput = document.getElementById('search');
-      const langSelect = document.getElementById('language');
-
       if (lang === 'fa') {
         searchInput.placeholder = 'جستجوی قوانین...';
-        langSelect.options[0].text = 'انگلیسی';
-        langSelect.options[1].text = 'ترکی';
-        langSelect.options[2].text = 'فارسی';
-        langSelect.options[3].text = 'روسی';
       } else if (lang === 'tr') {
         searchInput.placeholder = 'Kanunlarda ara...';
-        langSelect.options[0].text = 'İngilizce';
-        langSelect.options[1].text = 'Türkçe';
-        langSelect.options[2].text = 'Farsça';
-        langSelect.options[3].text = 'Rusça';
       } else if (lang === 'ru') {
         searchInput.placeholder = 'Поиск по законам...';
-        langSelect.options[0].text = 'Английский';
-        langSelect.options[1].text = 'Турецкий';
-        langSelect.options[2].text = 'Персидский';
-        langSelect.options[3].text = 'Русский';
       } else {
         searchInput.placeholder = 'Search laws...';
-        langSelect.options[0].text = 'English';
-        langSelect.options[1].text = 'Turkish';
-        langSelect.options[2].text = 'Persian';
-        langSelect.options[3].text = 'Russian';
       }
+
+      const langSelect = document.getElementById('language');
+      const currentValue = localStorage.getItem('selectedLanguage') || 'en';
+
+      const optionsData = {
+        en: ['English', 'Turkish', 'Persian', 'Russian'],
+        fa: ['انگلیسی', 'ترکی', 'فارسی', 'روسی'],
+        tr: ['İngilizce', 'Türkçe', 'Farsça', 'Rusça'],
+        ru: ['Английский', 'Турецкий', 'Персидский', 'Русский']
+      };
+
+      const values = ['en', 'tr', 'fa', 'ru'];
+
+      langSelect.innerHTML = '';
+      optionsData[lang].forEach((label, i) => {
+        const opt = document.createElement('option');
+        opt.value = values[i];
+        opt.textContent = label;
+        langSelect.appendChild(opt);
+      });
+
+      langSelect.value = currentValue;
     }
 
     async function loadCategories() {
@@ -182,21 +181,17 @@
     }
 
     window.onload = () => {
-      const langSelect = document.getElementById('language');
-      const savedLang = localStorage.getItem('selectedLanguage');
+      const savedLang = localStorage.getItem('selectedLanguage') || 'en';
+      localStorage.setItem('selectedLanguage', savedLang);
 
-      if (savedLang) {
-        langSelect.value = savedLang;
-      }
-
-      updateDirectionAndLabels(langSelect.value);
+      updateDirectionAndLabels(savedLang);
 
       setTimeout(() => {
         loadCategories().then(loadLaws);
       }, 10);
 
-      langSelect.addEventListener('change', () => {
-        const newLang = langSelect.value;
+      document.getElementById('language').addEventListener('change', () => {
+        const newLang = document.getElementById('language').value;
         localStorage.setItem('selectedLanguage', newLang);
         updateDirectionAndLabels(newLang);
         loadCategories().then(loadLaws);
