--- a/LAWS.html
+++ b/LAWS.html
@@ -8,15 +8,10 @@
 </head>
 <body class="bg-gray-50 font-sans">
   <div class="max-w-5xl mx-auto p-6">
-
     <div class="flex flex-col md:flex-row items-center justify-between mb-4 gap-2">
-      <select id="language" class="border p-2 rounded"></select>
-
-      <select id="category" class="border p-2 rounded">
-        <!-- Filled dynamically -->
-      </select>
-
-      <input id="search" type="text" placeholder="Search laws..." class="border p-2 rounded w-full md:w-1/3" />
+      <div id="language-container"></div>
+      <select id="category" class="border p-2 rounded"></select>
+      <input id="search" type="text" class="border p-2 rounded w-full md:w-1/3" />
     </div>
 
     <div id="laws" class="text-sm text-gray-700">Loading...</div>
@@ -26,9 +21,44 @@
     const SUPABASE_URL = 'https://tdvimwqotnuvcdvhvbjj.supabase.co';
     const API_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRkdmltd3FvdG51dmNkdmh2YmpqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDkxMDY2MjcsImV4cCI6MjA2NDY4MjYyN30.CWNPk-S-ECq0c1LRugDJYOchY3mgC2Zchyr8X8-mDeE';
 
+    const labels = {
+      en: { lawId: "Law ID:", category: "Category:", published: "Published:", search: "Search laws..." },
+      fa: { lawId: "شناسه:", category: "دسته‌بندی:", published: "تاریخ انتشار:", search: "جستجوی قوانین..." },
+      tr: { lawId: "Kanun No:", category: "Kategori:", published: "Yayın Tarihi:", search: "Kanunlarda ara..." },
+      ru: { lawId: "ID закона:", category: "Категория:", published: "Дата публикации:", search: "Поиск по законам..." }
+    };
+
+    const languageOptions = {
+      en: ['English', 'Turkish', 'Persian', 'Russian'],
+      fa: ['انگلیسی', 'ترکی', 'فارسی', 'روسی'],
+      tr: ['İngilizce', 'Türkçe', 'Farsça', 'Rusça'],
+      ru: ['Английский', 'Турецкий', 'Персидский', 'Русский']
+    };
+
+    const langValues = ['en', 'tr', 'fa', 'ru'];
+
+    function buildLanguageSelector(lang) {
+      const container = document.getElementById('language-container');
+      const select = document.createElement('select');
+      select.id = 'language';
+      select.className = 'border p-2 rounded';
+
+      languageOptions[lang].forEach((label, i) => {
+        const opt = document.createElement('option');
+        opt.value = langValues[i];
+        opt.textContent = label;
+        select.appendChild(opt);
+      });
+
+      select.value = lang;
+      container.innerHTML = '';
+      container.appendChild(select);
+    }
+
     function updateDirectionAndLabels(lang) {
       const html = document.documentElement;
       const body = document.body;
+      const searchInput = document.getElementById('search');
 
       if (lang === 'fa') {
         html.setAttribute('dir', 'rtl');
@@ -38,145 +68,99 @@
         body.classList.remove('text-right');
       }
 
-      const searchInput = document.getElementById('search');
-      if (lang === 'fa') {
-        searchInput.placeholder = 'جستجوی قوانین...';
-      } else if (lang === 'tr') {
-        searchInput.placeholder = 'Kanunlarda ara...';
-      } else if (lang === 'ru') {
-        searchInput.placeholder = 'Поиск по законам...';
-      } else {
-        searchInput.placeholder = 'Search laws...';
-      }
-
-      const langSelect = document.getElementById('language');
-      const currentValue = localStorage.getItem('selectedLanguage') || 'en';
-
-      const optionsData = {
-        en: ['English', 'Turkish', 'Persian', 'Russian'],
-        fa: ['انگلیسی', 'ترکی', 'فارسی', 'روسی'],
-        tr: ['İngilizce', 'Türkçe', 'Farsça', 'Rusça'],
-        ru: ['Английский', 'Турецкий', 'Персидский', 'Русский']
-      };
-
-      const values = ['en', 'tr', 'fa', 'ru'];
-
-      langSelect.innerHTML = '';
-      optionsData[lang].forEach((label, i) => {
-        const opt = document.createElement('option');
-        opt.value = values[i];
-        opt.textContent = label;
-        langSelect.appendChild(opt);
-      });
-
-      langSelect.value = currentValue;
+      searchInput.placeholder = labels[lang].search;
     }
 
     async function loadCategories() {
-      try {
-        const lang = document.getElementById('language').value;
-        const res = await fetch(`${SUPABASE_URL}/rest/v1/law_categories`, {
-          headers: { apikey: API_KEY, Authorization: `Bearer ${API_KEY}` }
-        });
-        const categories = await res.json();
+      const lang = document.getElementById('language').value;
+      const res = await fetch(`${SUPABASE_URL}/rest/v1/law_categories`, {
+        headers: { apikey: API_KEY, Authorization: `Bearer ${API_KEY}` }
+      });
+      const categories = await res.json();
 
-        const select = document.getElementById('category');
-        select.innerHTML = '';
-
-        categories.forEach(cat => {
-          const option = document.createElement('option');
-          option.value = cat.id;
-          option.textContent =
-            lang === 'tr' ? cat.name :
-            lang === 'fa' ? cat.name_fa :
-            lang === 'ru' ? cat.name_ru :
-            cat.name_en;
-          select.appendChild(option);
-        });
-      } catch (err) {
-        console.error('Error loading categories:', err);
-      }
+      const select = document.getElementById('category');
+      select.innerHTML = '';
+      categories.forEach(cat => {
+        const option = document.createElement('option');
+        option.value = cat.id;
+        option.textContent =
+          lang === 'fa' ? cat.name_fa :
+          lang === 'tr' ? cat.name :
+          lang === 'ru' ? cat.name_ru :
+          cat.name_en;
+        select.appendChild(option);
+      });
     }
 
     async function loadLaws() {
-      try {
-        const lang = document.getElementById('language').value;
-        const selectedCat = document.getElementById('category').value;
-        const search = document.getElementById('search').value.toLowerCase();
+      const lang = document.getElementById('language').value;
+      const t = labels[lang];
+      const selectedCat = document.getElementById('category').value;
+      const search = document.getElementById('search').value.toLowerCase();
 
-        const [lawsRes, catsRes] = await Promise.all([
-          fetch(`${SUPABASE_URL}/rest/v1/laws?select=*`, {
-            headers: { apikey: API_KEY, Authorization: `Bearer ${API_KEY}` }
-          }),
-          fetch(`${SUPABASE_URL}/rest/v1/law_categories`, {
-            headers: { apikey: API_KEY, Authorization: `Bearer ${API_KEY}` }
-          })
-        ]);
+      const [lawsRes, catsRes] = await Promise.all([
+        fetch(`${SUPABASE_URL}/rest/v1/laws?select=*`, {
+          headers: { apikey: API_KEY, Authorization: `Bearer ${API_KEY}` }
+        }),
+        fetch(`${SUPABASE_URL}/rest/v1/law_categories`, {
+          headers: { apikey: API_KEY, Authorization: `Bearer ${API_KEY}` }
+        })
+      ]);
 
-        const laws = await lawsRes.json();
-        const categories = await catsRes.json();
-        const container = document.getElementById('laws');
-        container.innerHTML = '';
+      const laws = await lawsRes.json();
+      const categories = await catsRes.json();
+      const container = document.getElementById('laws');
+      container.innerHTML = '';
 
-        laws
-          .filter(law => {
-            if (selectedCat && !isNaN(selectedCat)) {
-              return (law.categories_original || []).includes(parseInt(selectedCat));
-            }
-            return true;
-          })
-          .filter(law => {
-            const title =
-              lang === 'tr' ? law.title_original :
-              lang === 'fa' ? law.title_fa :
-              lang === 'ru' ? law.title_ru :
-              law.title_en;
-            return title?.toLowerCase().includes(search);
-          })
-          .forEach(law => {
-            const title =
-              lang === 'tr' ? law.title_original :
-              lang === 'fa' ? law.title_fa :
-              lang === 'ru' ? law.title_ru :
-              law.title_en;
+      laws
+        .filter(law => !selectedCat || (law.categories_original || []).includes(parseInt(selectedCat)))
+        .filter(law => {
+          const title =
+            lang === 'fa' ? law.title_fa :
+            lang === 'tr' ? law.title_original :
+            lang === 'ru' ? law.title_ru :
+            law.title_en;
+          return title?.toLowerCase().includes(search);
+        })
+        .forEach(law => {
+          const title =
+            lang === 'fa' ? law.title_fa :
+            lang === 'tr' ? law.title_original :
+            lang === 'ru' ? law.title_ru :
+            law.title_en;
 
-            const catNames = (law.categories_original || [])
-              .map(id => {
-                const cat = categories.find(c => c.id === id);
-                if (!cat) return null;
-                return (
-                  lang === 'tr' ? cat.name :
-                  lang === 'fa' ? cat.name_fa :
-                  lang === 'ru' ? cat.name_ru :
-                  cat.name_en
-                );
-              })
-              .filter(Boolean)
-              .join(', ') || 'Not specified';
+          const catNames = (law.categories_original || [])
+            .map(id => {
+              const cat = categories.find(c => c.id === id);
+              if (!cat) return null;
+              return (
+                lang === 'fa' ? cat.name_fa :
+                lang === 'tr' ? cat.name :
+                lang === 'ru' ? cat.name_ru :
+                cat.name_en
+              );
+            })
+            .filter(Boolean)
+            .join(', ') || 'Not specified';
 
-            const div = document.createElement('div');
-            div.className = 'border p-4 mb-4 bg-white shadow rounded';
+          const div = document.createElement('div');
+          div.className = 'border p-4 mb-4 bg-white shadow rounded' + (lang === 'fa' ? ' text-right' : '');
 
-            div.innerHTML = `
-              <h2 class="text-xl font-semibold mb-2 text-blue-600 underline cursor-pointer"
-                  onclick="window.location.href='LAW_details.html?id=${encodeURIComponent(law.law_id)}&lang=' + document.getElementById('language').value">
-                ${title}
-              </h2>
-              <p class="text-gray-600 text-sm mb-1">Law ID: ${law.law_id}</p>
-              <p class="text-gray-600 text-sm mb-1">Category: ${catNames}</p>
-              <p class="text-gray-500 text-sm">Published: ${law.publish_date}</p>
-            `;
+          div.innerHTML = `
+            <h2 class="text-xl font-semibold mb-2 text-blue-600 underline cursor-pointer"
+                onclick="window.location.href='LAW_details.html?id=${encodeURIComponent(law.law_id)}&lang=${lang}'">
+              ${title}
+            </h2>
+            <p class="text-gray-600 text-sm mb-1"><strong>${t.lawId}</strong> ${law.law_id}</p>
+            <p class="text-gray-600 text-sm mb-1"><strong>${t.category}</strong> ${catNames}</p>
+            <p class="text-gray-500 text-sm"><strong>${t.published}</strong> ${law.publish_date}</p>
+          `;
 
-            container.appendChild(div);
-          });
+          container.appendChild(div);
+        });
 
-        if (container.innerHTML === '') {
-          container.innerHTML = '<p class="text-gray-500">No laws found for this category.</p>';
-        }
-
-      } catch (err) {
-        console.error('Error loading laws:', err);
-        document.getElementById('laws').innerHTML = `<p class="text-red-500">Failed to load laws.</p>`;
+      if (container.innerHTML === '') {
+        container.innerHTML = '<p class="text-gray-500">نتیجه‌ای پیدا نشد.</p>';
       }
     }
 
@@ -184,17 +168,21 @@
       const savedLang = localStorage.getItem('selectedLanguage') || 'en';
       localStorage.setItem('selectedLanguage', savedLang);
 
+      buildLanguageSelector(savedLang);
       updateDirectionAndLabels(savedLang);
 
       setTimeout(() => {
         loadCategories().then(loadLaws);
       }, 10);
 
-      document.getElementById('language').addEventListener('change', () => {
-        const newLang = document.getElementById('language').value;
-        localStorage.setItem('selectedLanguage', newLang);
-        updateDirectionAndLabels(newLang);
-        loadCategories().then(loadLaws);
+      document.addEventListener('change', (e) => {
+        if (e.target.id === 'language') {
+          const newLang = e.target.value;
+          localStorage.setItem('selectedLanguage', newLang);
+          buildLanguageSelector(newLang);
+          updateDirectionAndLabels(newLang);
+          loadCategories().then(loadLaws);
+        }
       });
 
       document.getElementById('category').addEventListener('change', loadLaws);
